# color-testcase

./: README.md  pyproject.toml  run.sh
color_testcase/: black_bodies.py  color_system.py  main.py
